COMP/lab1/tarefa2/calc.atg
COMPILER Calc

CHARACTERS
    digito = "0123456789".

TOKENS
    num = digito {digito}.

IGNORE '\t'+'\r'

PRODUCTIONS
    Calc = Linha {Linha}.
    Linha = "calc" Exp "\n".
    Exp = Termo {"+" Termo}.
    Termo = Fator {"*" Fator}.
    Fator = num.

END Calc.
